# learn-rag-langchain

./: README.md
academy-langchain/: .gitignore  L1_fast_agent.ipynb  L2_messages.ipynb  L3_streaming.ipynb  L4_tools.ipynb  L5_tools_with_mcp.ipynb  L6_memory.ipynb  L7_structuredOutput.ipynb  L8_dynamic.ipynb  L9_HITL.ipynb  README.md  env_utils.py  pyproject.toml  requirements.txt
academy-langchain/studio/: langgraph.json  sql_agent1.py  sql_agent2.py
academy-langchain/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
academy-langgraph/module-1/: 1.txt  agent-memory_zh.ipynb  agent_zh.ipynb  chain_zh.ipynb  router_zh.ipynb  simple-graph_zh.ipynb
academy-langgraph/module-2/: 2.py  2.txt  chatbot-external-memory_zh.ipynb  chatbot-summarization.ipynb  chatbot-summarization_zh.ipynb  multiple-schemas_zh.ipynb  state-reducers_zh.ipynb  state-schema_zh.ipynb  trim-filter-messages_zh.ipynb
academy-langgraph/module-3/: 3.txt  breakpoints_zh.ipynb  dynamic-breakpoints_zh.ipynb  edit-state-human-feedback_zh.ipynb  streaming-interruption_zh.ipynb  time-travel_zh.ipynb
academy-langgraph/module-4/: 4.txt  (+5 more)
agentic-rag/: agentic-rag.ipynb  demo.py
langgraph-mcp/: langgraph-mcp.py  mcp_service_demo.py  tool_calling_demo.py  tool_test.py  weather_server.py
langmem/: learn_langmem_back.ipynb  learn_langmem_hot.ipynb
multi-agent/: Multi-agent supervisor.ipynb  hierarchial_demo.py  multi-agent-collaboration.ipynb
rag评估/: RAGAS-langchian.ipynb
(+20 files in other folders)
